# dojo.ml-cxx

./: .gitignore  CMakeLists.txt  README.md  main.cxx
benchmarks/: matrix_ops.cxx
cmake/: FindArmadillo.cmake  FindBlas.cmake  FindBoost.cmake  FindCLBlast.cmake  FindEigen.cmake  FindGSL.cmake  FindOpenCL.cmake
common/: ml_common.cpp  ml_common.h
